k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: secure-task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U task_user -d tasks"]
            initialDelaySeconds: 5
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U task_user -d tasks"]
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: secure-task-manager
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
