k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-api
  namespace: secure-task-manager
spec:
  selector:
    app: task-manager-api
  ports:
    - port: 80
      targetPort: 8000
