k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-api
  namespace: secure-task-manager
spec:
  ingressClassName: nginx
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: task-manager-api
                port:
                  number: 80
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-manager-api
                port:
                  number: 80
